<resources>
    <string name="app_name">Minesweeper</string>
    <string name="start">Играть</string>
    <string name="options">Настройки</string>
    <string name="leaderboard">Доска лидеров</string>
    <string name="app_logo">Блоб пердун</string>

    <string name="settings"> Настройки </string>
    <string name="mines_hint"> Количество мин (например, 10)</string>
    <string name="field_hint">Размер поля (до 10)</string>
    <string name="save_options">Сохранить</string>
    <string name="button_restart">Заново</string>
    <string name="button_exit">Выйти в меню</string>
</resources>