<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button1"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:id="@+id/button2"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:id="@+id/button3"
        android:layout_gravity="center"
        />
</LinearLayout>
